--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <body>
         <table cellspacing ="20">
         <tr>
-            <td><img src="https://github.com/prakort/cv/blob/master/image/lean2.jpg" alt="Prakort's Photo" height="175" width="175"></td>
+            <td><img src="
+        cv/image/lean2.jpg
+      " alt="Prakort's Photo" height="175" width="175"></td>
             <td><h1>Prakort Lean</h1><p>Undergraduate Student<br /> Mathematics and Computer Science <br/>Univeristy of Windsor</br/></p></td>
         </tr>
         </table>
