--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
         <table cellspacing ="20">
         <tr>
             <td><img src="
-        "https://github.com/prakort/cv/blob/master/image/lean.png"
-      " alt="Prakort's Photo" height="100" width="100"/></td>
+        "https://github.com/prakort/cv/blob/master/image/lean.png" height="100" width="100"/></td>
             <td><h1>Prakort Lean</h1><p>Undergraduate Student<br /> Mathematics and Computer Science <br/>Univeristy of Windsor</br/></p></td>
         </tr>
         </table>
