--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <body>
         <table cellspacing ="20">
         <tr>
-            <td><img src="
-        "https://github.com/prakort/cv/blob/master/image/lean.png" width="100"/></td>
+            <td>![image](/cv/blob/master/image/your-image.jpg)</td>
             <td><h1>Prakort Lean</h1><p>Undergraduate Student<br /> Mathematics and Computer Science <br/>Univeristy of Windsor</br/></p></td>
         </tr>
         </table>
