--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <table cellspacing ="20">
         <tr>
-            <td>![image](/cv/blob/master/image/your-image.jpg)</td>
+            <td><img src="/assets/images/lean2.jpg" alt=""></td>
             <td><h1>Prakort Lean</h1><p>Undergraduate Student<br /> Mathematics and Computer Science <br/>Univeristy of Windsor</br/></p></td>
         </tr>
         </table>
