--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <table cellspacing ="20">
         <tr>
-            <td><img src="https://github.com/prakort/cv/blob/master/image/lean.png" alt="" /></td>
+            <td><img src="./image/lean.png" alt="" width="100"/></td>
             <td><h1>Prakort Lean</h1><p>Undergraduate Student<br /> Mathematics and Computer Science <br/>Univeristy of Windsor</br/></p></td>
         </tr>
         </table>
