--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
             <td><h1>Prakort Lean</h1><p>Undergraduate Student<br /> Mathematics and Computer Science <br/>Univeristy of Windsor</br/></p></td>
         </tr>
         </table>
+    <h4>Summary:<h4/>
+
+    <p>
+        <h5>An independent and self motivated student with exceptional academic record.<br />
+            A teamplayer and opened-minded person.<br/>
+            An outstanding scholar top 250 undergraduate students.<br />
+        </h5>
+    </p>
 
     <hr />
 
