--- a/contactme.html
+++ b/contactme.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>My contacts:</h1>
-        <p>Tel: 226-280-8363</p>
+        <a herf="https://www.linkedin.com/in/prakort/"> Linkedin <a/>
         <p>Email: leanprakort@gmail.com</p>
 
         <form action="mailto: leanprakort@gmail.com" method ="post" enctype="text/plain" >
